# 1seed

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: ci.yml
completions/: 1seed.bash  1seed.fish  1seed.zsh
src/: age.rs  cli.rs  config.rs  derive.rs  main.rs  password.rs  seed.rs  sign.rs  ssh.rs  update.rs
tests/: integration.rs
